desktop-base (7.0.1) UNRELEASED; urgency=low

  [ Eshat Cakar ]
  * Make 1366x768 ksplash background really that resolution. (Closes: #679306)
  * Fix typo in plymouth theme. (Closes: #679357)
  * Updated ink-splated kde wallpaper, to fix alignment issues.

  [ Paul Tagliamonte ]
  * Add ${misc:Depends} to the Depends for the binary package. We're using
    debhelper, so we should behave nicely.
  * Updated GDM & KDM's login background to have branding in the lower-right.
  * Inverting the GRUB highlight colors. This helps those who might be hard
    of sight, or think it's generally hard to see. (Closes: #680505)

 -- Paul Tagliamonte <paultag@debian.org>  Mon, 09 Jul 2012 20:24:40 -0400

desktop-base (7.0.0) unstable; urgency=low

  [ Eshat Cakar ]
  * Updated the KDM theme.
  * Updated the ksplash theme.
  * Install Joy wallpapers into /usr/share/wallpapers/
    This makes them visibile in KDE's wallpaper chooser
  * Set default wallpaper for new users via plasma scripting

  [ Paul Tagliamonte ]
  * Added joy-inksplat into gnome-backgrounds.xml (Closes: #678937),
    thanks, Fabian!
  * Small rewrite of problematic debian/copyright lines (Closes: #678746),
    thanks, Francesco!

 -- Eshat Cakar <info@eshat.de>  Mon, 25 Jun 2012 10:44:07 -0400

desktop-base (7.0.0~exp2) experimental; urgency=low

  * Remove GConf defaults, they are not used anymore.
  * Remove the GDM3 settings, since the configuration format for GDM
    change again, yay.
  * Add a dconf file for the new-style GDM3 configuration.
  * Add a XML file describing the available resolutions for the
    background (for use with GNOME).
  * postinst: use a higher priority for the 1920x1080 background.
  * Cleanup postinst/prerm/postrm.
  * Add a new alternative: desktop-background.xml.
  * Use it from the gsettings override.
  * Reload gdm3 after installation/removal.
  * Drop old libgnome2-common hack.
  * Clean up an alternative that is no longer available.
